# training_status

./: .env.example  .env.example.old  .gitignore  README.md  SECURITY.md  TODO.md  requirements.txt  setup-both.sh  setup.sh  start-both.sh  start-prod.sh  start.sh
backend/: README.md  pyproject.toml  requirements.txt  training_status.txt
backend/src/training_status/: __init__.py  __main__.py  api.py  cli.py  config.py  models.py
backend/src/training_status/database/: __init__.py  db.py  schema.py
backend/src/training_status/services/: __init__.py  analytics.py  intervals.py  reports.py  smashrun.py  strava.py
backend/tests/: __init__.py  conftest.py  test_analytics.py  test_api.py  test_database.py  test_models.py
docs/: API_FIELDS.md  README.md  TODO.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  api.ts  idb.ts  index.css  types.ts
frontend/src/components/: EmptyState.tsx  SharedView.tsx  TabNav.tsx
frontend/src/components/charts/: DetrainingChart.tsx  HrvChart.tsx  TrainingLoadChart.tsx  TsbZonesChart.tsx  Vo2maxChart.tsx  WeeklyKmChart.tsx
frontend/src/components/current/: MetricCard.tsx
frontend/src/components/features/: CalendarHeatmap.tsx  CompareMode.tsx  ConsistencyScore.tsx  CorrelationInsights.tsx  DashboardConfig.tsx  DataExport.tsx  FatiguePattern.tsx  GearTracker.tsx  GoalAdherence.tsx  GoalProgress.tsx  HealthEventLog.tsx  HrDriftAnalysis.tsx  InjuryRiskPanel.tsx  LastUpdated.tsx  OverloadTracker.tsx  PaceZonesChart.tsx  PersonalRecords.tsx  (+17 more)
frontend/src/hooks/: useLatestSnapshot.ts  useSnapshots.ts
frontend/src/layouts/: LayoutA_Sidebar.tsx  LayoutB_CompactDashboard.tsx  LayoutC_Accordion.tsx  LayoutD_SplitView.tsx  LayoutE_ThreePanel.tsx  LayoutPreview.tsx
frontend/src/utils/: metrics.ts
scripts/: setup.sh  start.sh
(+5 files in other folders)
